--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,17 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Monofett&display=swap" rel="stylesheet">
     <style>
       .hidden {
         display: none;
+      }
+      @import url('https://fonts.googleapis.com/css2?family=Monofett&display=swap');
+      .brandFont {
+        font-family: 'Monofett', cursive;
+        font-size: 3rem;
       }
     </style>
 
